fixed button spacing for admin tab and reservation tab

--- a/src/styles/reservationCard.css
+++ b/src/styles/reservationCard.css
@@ -1,14 +1,16 @@
+.buttonContainer {
+    display: flex;
+    justify-content: space-around;
+}
+
 .editButtonContainer {
     display: flex;
     justify-content: left;
 }
 
-.deleteButtonContainer {
+.cancelButtonContainer {
     display: flex;
     justify-content: right;
 }
 
-.buttons {
-    margin: 0px 5px;
-}
 
